2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c, tree.h (cobc_return_code): New variable.
	* parser.y (call_returning): Move RETURN-CODE to RETURNING field.
	* inline.c (output_move_index): New function.
	(output_call_statement): Don't take ret.

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_expr): Give field name to cob_check_numeric.
	(output_field_definition): No longer output field name.

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (expr_item_list): Better source location.
	* codegen.c (output_compare): Take additional argument for better
	source location.
	(output_condition): Updated.
	* inline.c (output_search_all): Updated.

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_recursive): Process top-level redefinition.

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* Keep field names at run-time.
	* codegen.c (output_field_definition): Output field name.

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c: Rename `COB_LDADD' to `COB_LIBS'

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (cobc_verbose_flag): New variable.
	(short_options, long_options): New option -v and --verbose.
	(process_command_line): Handle -v option.
	* cobc.h (cobc_verbose_flag): Declared.
