@@ -103,8 +103,8 @@ extern long long cob_exp10LL[19];
 extern void cob_init (int argc, char **argv);
 extern void cob_module_init (void);
 extern void cob_stop_run (void);
-extern int cob_index (int i, int max);
-extern int cob_index_depending (int i, int min, int max, int dep);
+extern int cob_index (int i, int max, const char *name);
+extern int cob_index_depending (int i, int min, int max, int dep, const char *name, const char *depname);
 
 extern int cob_cmp_field (struct cob_field f1, struct cob_field f2);
 extern int cob_cmp_str (struct cob_field f1, unsigned char *data2, int len2);
